WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
123376
AX: Webkit does not expose AXRequired on input type=file
https://bugs.webkit.org/show_bug.cgi?id=123376
Summary
AX: Webkit does not expose AXRequired on input type=file
James Craig
Reported
2013-10-25 17:16:27 PDT
AX: Webkit does not expose AXRequired on input type=file. Test case attached.
Attachments
test case demonstrating bug
(591 bytes, text/html)
2013-10-25 17:21 PDT
,
James Craig
no flags
Details
patch
(3.43 KB, patch)
2013-10-28 18:00 PDT
,
chris fleizach
mario
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2013-10-25 17:17:06 PDT
<
rdar://problem/15325032
>
James Craig
Comment 2
2013-10-25 17:21:18 PDT
Created
attachment 215231
[details]
test case demonstrating bug
chris fleizach
Comment 3
2013-10-28 18:00:29 PDT
Created
attachment 215357
[details]
patch
chris fleizach
Comment 4
2013-10-29 08:59:44 PDT
http://trac.webkit.org/changeset/158193
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug