AX: Webkit does not expose AXRequired on input type=file https://bugs.webkit.org/show_bug.cgi?id=123376

Reviewed by Mario Sanchez Prada.

Source/WebCore:

File upload buttons should expose AXRequired, since they take an input state.

* accessibility/AccessibilityNodeObject.cpp:
(WebCore::AccessibilityNodeObject::supportsRequiredAttribute):
(WebCore::AccessibilityNodeObject::alternativeText):

LayoutTests:

Modify existing test case to test for file upload buttons.

* accessibility/html5-required-attribute-expected.txt:
* accessibility/html5-required-attribute.html:



Canonical link: https://commits.webkit.org/141566@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@158193 268f45cc-cd09-0410-ab3c-d52691b4dbfc